maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:36: error: not found: value void
    void setDirection(dir)
    ^